<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">


    <TextView
        android:id="@+id/stockDetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/current_stock_information"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Switch
        android:id="@+id/favoriteSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/stockDetailsTextView"
        android:layout_alignBottom="@+id/stockDetailsTextView"
        android:layout_alignParentEnd="true"
        android:text="@string/favorite"
        android:textColor="#000000"
        android:textOn="On" />

    <ScrollView
        android:id="@+id/currentStockScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/stockDetailsTextView"
        android:layout_alignParentStart="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/currentStockRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <ProgressBar
        android:id="@+id/currentStockProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/currentStockScrollView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />
    <TextView
        android:id="@+id/fetchingCurrentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentStockProgressBar"
        android:layout_centerInParent="true"
        android:text="@string/fetching_data"
        android:textColor="#000000" />
</RelativeLayout>
